Bug 136617 - FILEOPEN: DOCX: table is larger from LO 7.1
Summary: FILEOPEN: DOCX: table is larger from LO 7.1
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: high normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords: bibisected, bisected, filter:docx, regression
: 144342 (view as bug list)
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2020-09-09 18:08 UTC by Xisco Faulí
Modified: 2022-10-25 07:35 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By: László Németh


Attachments
Comparison MSO 2010 and LibreOffice 7.1 master (276.00 KB, image/png)
2020-09-09 18:08 UTC, Xisco Faulí
Details
sample document (39.34 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-09-09 18:08 UTC, Xisco Faulí
Details
file also affected by the same commit (756.47 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-09-09 18:15 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-09-09 18:08:37 UTC
Created attachment 165330 [details]
Comparison MSO 2010 and LibreOffice 7.1 master

Steps to reproduce:
1. Open attached document

-> The table is displayed in two pages, the last row has an incorrect height and the vertical text in the first column is rotated. See comparison image

Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: 63d4d3421fec5a4e9e88dcee2992cda38cc7452a
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2020-09-09 18:08:55 UTC
Created attachment 165331 [details]
sample document
Comment 2 Xisco Faulí 2020-09-09 18:10:15 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=bf3124cdf61b40c94ba117a76f1b63dabdfd528e

author	László Németh <nemeth@numbertext.org>	2020-08-19 13:00:58 +0200
committer	László Németh <nemeth@numbertext.org>	2020-08-20 10:34:18 +0200
commit bf3124cdf61b40c94ba117a76f1b63dabdfd528e (patch)
tree d215ab62a6be1efb9872f4ef4835db6840ca018b
parent b39364492c7cbe34923e0d0755db8737b7d6225a (diff)
tdf#135187 DOCX import: fix table style at character formatting

Bisected with: bibisect-linux64-7.1

Adding Cc: to László Németh
Comment 3 Xisco Faulí 2020-09-09 18:13:17 UTC
attachment 74936 [details] from bug 60952 is also affected by the same commit. The document has 3 pages in master instead of 2
Comment 4 Xisco Faulí 2020-09-09 18:15:55 UTC
Created attachment 165332 [details]
file also affected by the same commit

In this file, the document has 3 pages instead of 2
Comment 5 Timur 2021-09-08 07:25:05 UTC
*** Bug 144342 has been marked as a duplicate of this bug. ***
Comment 6 Timur 2021-09-08 07:30:35 UTC
Another DOCX attachment 174838 [details] from bug 144342. 
I set High as a regression with multiple examples. 
DOC not affected.
Comment 7 Xisco Faulí 2022-05-03 11:48:23 UTC
Dear László Németh,
This bug has been in ASSIGNED status for more than 3 months without any
activity. Resetting it to NEW.
Please assign it back to yourself if you're still working on this.
Comment 8 Timur 2022-09-08 12:19:29 UTC
Could offending commit and the previous one it was fixing be simply reverted?
That would fix this bug and bug 141969, and bug 118812 should be reconsidered.
Comment 9 László Németh 2022-10-07 11:50:32 UTC
Proposed fix: https://gerrit.libreoffice.org/c/core/+/141052
Comment 10 Commit Notification 2022-10-07 15:00:27 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2a3e528bb9df4a1a2564ca5236be62dfdaba77e6

tdf#136617 DOCX import: fix empty table paragraphs with direct formatting

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 László Németh 2022-10-07 15:02:17 UTC
Xisco, Timur: many thanks for the report and feedback!
Comment 12 Commit Notification 2022-10-10 09:02:15 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/f9d34f1498404f74310a81b2dcf322867fa28e9c

tdf#136617 DOCX import: fix empty table paragraphs with direct formatting

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 NISZ LibreOffice Team 2022-10-25 07:35:26 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 20ebccd6b349a1d9d3e057de55933c2805ff5d1a
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded