tdf#136617 DOCX import: fix empty table paragraphs with direct formatting

Table paragraph styles applied on paragraphs without runs, i.e.
on empty paragraphs, despite their direct formatting, resulting
e.g. different font size, and after that different paragraph
i.e. cell height, breaking the original table layout.

Regression from commit bf3124cdf61b40c94ba117a76f1b63dabdfd528e
"tdf#135187 DOCX import: fix table style at character formatting".

Also clean-up commit 498d2b82187ec3ff58f076e0d15741e64c0505ba
"tdf#131546 DOCX import: fix performance regression at tables".

Change-Id: I41f8da61d49902c8c1683bd01632cce6d58aebd9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141052
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>