writerfilter/source/dmapper/DomainMapperTableHandler.cxx
@@ -1112,14 +1112,6 @@ void DomainMapperTableHandler::ApplyParagraphPropertiesFromTableStyle(TableParag
 
             OUString sPropertyName = getPropertyName(eId);
 
-            if ( bIsParaLevel && ( rParaProp.m_aParaOverrideApplied.find(sPropertyName) != rParaProp.m_aParaOverrideApplied.end() ||
-                sPropertyName.startsWith("CharFontName") ) )
-            {
-                // don't apply table style, if this character property was applied on paragraph level
-                // (or in the case of paragraph level font name settings to avoid regressions)
-                continue;
-            }
-
             auto pCellProp = std::find_if(rCellProperties.begin(), rCellProperties.end(),
                 [&](const beans::PropertyValue& rProp) { return rProp.Name == sPropertyName; });
             // this cell applies the table style property
@@ -1179,6 +1171,10 @@ void DomainMapperTableHandler::ApplyParagraphPropertiesFromTableStyle(TableParag
                     uno::Reference< beans::XPropertyState > xParaProperties( xParagraph, uno::UNO_QUERY_THROW );
                     if ( xParaProperties->getPropertyState(sPropertyName) == css::beans::PropertyState_DEFAULT_VALUE )
                     {
+                        // don't overwrite empty paragraph with table style, if it has a direct paragraph formatting
+                        if ( bIsParaLevel && xParagraph->getString().getLength() == 0 )
+                            continue;
+
                         if ( eId != PROP_FILL_COLOR )
                         {
                             // apply style setting when the paragraph doesn't modify it
